Replace switch statements with switch expressions and Collections.emptyList() with List.of()